# energy-apps

./: .gitignore  .rubocop.yml  .trivyignore  Dockerfile  Gemfile  README.md  package.json
.github/: dependabot.yml
.github/resources/: preview-overrides.yaml
.github/workflows/: deploy-energy-apps.yaml  docker-image-scan.yml  lint_and_test.yml  review-app-create.yml  review-app-destroy.yml  review-app-scan.yml  upload-js-to-datadog.yml
app/components/: breadcrumbs_component.rb  footer_component.rb  fuel_mix_component.rb  impact_survey_component.rb  location_switcher_component.rb  other_info_component.rb  other_scores_component.rb  score_component.rb  score_summary_component.rb  stars_component.rb  supplier_table_component.rb  supplier_table_row_component.rb
app/controllers/: application_controller.rb  suppliers_controller.rb
app/helpers/: footer_helper.rb  js_file_helper.rb
app/javascript/: appliance-calculator.js  application.js  last_added_appliance.js
app/lib/: feature.rb
app/models/: appliance.rb  cyclical_daily_usage.rb  supplier.rb  time_based_daily_usage.rb
config/: application.rb  puma.rb  routes.rb
config/environments/: development.rb  production.rb  test.rb
config/initializers/: assets.rb  content_security_policy.rb  datadog.rb  js_build_manifest_generator.rb  session_store.rb
db/: schema.json
docs/: analytics.md  datadog-js-monitoring.md  getting-started.md  static-asset-pipeline.md
docs/appliance-calculator/: README.md
features/: cookie_preferences.feature
infrastructure/energy-apps-cdk/: pyproject.toml
(+205 files in other folders)
