[tool.poetry]
name = "energy-apps-cdk"
version = "0.1.0"
description = "CDK app for the Energy Apps"
authors = ["Digital Energy Team via <contentplatform@citizensadvice.org.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
pytest = "8.3.3"
ca-cdk-constructs = {git = "https://github.com/citizensadvice/ca-cdk-constructs", rev = "v0.17.0"}
aws-cdk-cli = "^2.1017.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"

[tool.black]
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
